[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/device_screen_simulator/simulator.gd" type="Script" id=1]
[ext_resource path="res://addons/device_screen_simulator/phone_rotation.tres" type="ButtonGroup" id=2]

[node name="DeviceScreenSimulator" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 211.0
margin_bottom = 224.0
custom_constants/separation = 20

[node name="Resolution_label" type="Label" parent="VBoxContainer"]
margin_right = 211.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Current resolution:"
align = 1
valign = 1
clip_text = true

[node name="Phone_Model_optionbutton" type="OptionButton" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 211.0
margin_bottom = 80.0
text = "Phone model..."

[node name="Screen_Orientation_hboxcontainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 211.0
margin_bottom = 124.0
alignment = 1

[node name="Portrait_checkbox" type="CheckBox" parent="VBoxContainer/Screen_Orientation_hboxcontainer"]
margin_left = 18.0
margin_right = 93.0
margin_bottom = 24.0
pressed = true
group = ExtResource( 2 )
text = "Portrait"

[node name="Landscape_checkbox" type="CheckBox" parent="VBoxContainer/Screen_Orientation_hboxcontainer"]
margin_left = 97.0
margin_right = 192.0
margin_bottom = 24.0
group = ExtResource( 2 )
text = "Landscape"

[node name="Window_Settings_checkbutton" type="CheckButton" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 211.0
margin_bottom = 184.0
text = "Edit window settings"

[node name="Stretch_Modes_vboxcontainer" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 144.0
margin_right = 211.0
margin_bottom = 238.0
custom_constants/separation = 20

[node name="Stretch_Mode_optionbutton" type="OptionButton" parent="VBoxContainer/Stretch_Modes_vboxcontainer"]
margin_right = 211.0
margin_bottom = 20.0

[node name="Stretch_Aspect_optionbutton" type="OptionButton" parent="VBoxContainer/Stretch_Modes_vboxcontainer"]
margin_top = 40.0
margin_right = 211.0
margin_bottom = 60.0

[node name="Stretch_Shrink_hboxcontainer" type="HBoxContainer" parent="VBoxContainer/Stretch_Modes_vboxcontainer"]
margin_top = 80.0
margin_right = 211.0
margin_bottom = 94.0
custom_constants/separation = 10

[node name="Stretch_Shrink_label" type="Label" parent="VBoxContainer/Stretch_Modes_vboxcontainer/Stretch_Shrink_hboxcontainer"]
margin_right = 43.0
margin_bottom = 14.0
text = "Shrink:"

[node name="Stretch_Shrink_hscrollbar" type="HScrollBar" parent="VBoxContainer/Stretch_Modes_vboxcontainer/Stretch_Shrink_hboxcontainer"]
margin_left = 53.0
margin_right = 171.0
margin_bottom = 12.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 8.0
step = 0.01
value = 1.0

[node name="StretchShrink_Value_label" type="Label" parent="VBoxContainer/Stretch_Modes_vboxcontainer/Stretch_Shrink_hboxcontainer"]
margin_left = 181.0
margin_right = 211.0
margin_bottom = 14.0
rect_min_size = Vector2( 30, 0 )
text = "8.00"

[node name="Buttons_hboxcontainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 211.0
margin_bottom = 224.0
custom_constants/separation = 10
alignment = 1

[node name="Reset_button" type="Button" parent="VBoxContainer/Buttons_hboxcontainer"]
margin_left = 35.0
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 65, 0 )
text = "Reset"

[node name="Confirm_button" type="Button" parent="VBoxContainer/Buttons_hboxcontainer"]
margin_left = 110.0
margin_right = 175.0
margin_bottom = 20.0
rect_min_size = Vector2( 65, 0 )
text = "Confirm"

[connection signal="item_selected" from="VBoxContainer/Phone_Model_optionbutton" to="." method="_on_Phone_Model_optionbutton_item_selected"]
[connection signal="pressed" from="VBoxContainer/Screen_Orientation_hboxcontainer/Portrait_checkbox" to="." method="_on_Portrait_checkbox_pressed"]
[connection signal="pressed" from="VBoxContainer/Screen_Orientation_hboxcontainer/Landscape_checkbox" to="." method="_on_Landscape_checkbox_pressed"]
[connection signal="toggled" from="VBoxContainer/Window_Settings_checkbutton" to="." method="_on_Window_Settings_checkbutton_toggled"]
[connection signal="item_selected" from="VBoxContainer/Stretch_Modes_vboxcontainer/Stretch_Mode_optionbutton" to="." method="_on_Stretch_Mode_optionbutton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Stretch_Modes_vboxcontainer/Stretch_Aspect_optionbutton" to="." method="_on_Stretch_Aspect_optionbutton_item_selected"]
[connection signal="scrolling" from="VBoxContainer/Stretch_Modes_vboxcontainer/Stretch_Shrink_hboxcontainer/Stretch_Shrink_hscrollbar" to="." method="_on_Stretch_Shrink_hscrollbar_scrolling"]
[connection signal="pressed" from="VBoxContainer/Buttons_hboxcontainer/Reset_button" to="." method="_on_Reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons_hboxcontainer/Confirm_button" to="." method="_on_Confirm_button_pressed"]
